2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Display the expression locations in errors
	* src/uexpression.hh, src/uexpression.cc (eval_LIST, eval_GROUP):
	New, extracted from...
	(eval): here.
	(send_error): New.
	Use it instead of snprintf + send dark incantations.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Put UDefType in its class
	* src/utypes.hh (UDefType): Move to...
	* src/ucommand.hh (UCommand_DEF::UDefType): here.
	Adjust all uses.
	* src/uvariablename.hh (id_type): Remove, unused.
	Adjust all "uses" (that were useless).

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Attach locations to UExpressions
	* src/uexpression.hh, src/uexpression.cc (UExpression): Derive
	from UAst.
	Adjust all uses.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Remove useless prefix
	* src/ucommand.hh: No need to specify UCommand:: where we're in it.
	Besides, it actually comes from UAst.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Fix location tracking
	When load is executed, we must preserve the current location.
	* src/parser/uparser.cc (UParser::process_): When loading a file
	backup the current location and restore it to keep track of
	the location in the input.

2006-12-27  Akim Demaille  <akim.demaille@free.fr>

	Add location to command errors
	* src/uast.hh (loc): New.
	* src/ucommand.cc (send_error): Also report the location of
	the broken command.

2006-12-27  Akim Demaille  <akim.demaille@free.fr>

	On second thought, pass the command to send_error
	* src/ucommand.cc (send_error): Instead of taking a tag,
	take a command and use its tag.
	And use an string stream for the format.

2006-12-27  Akim Demaille  <akim.demaille@free.fr>

	send_error
	* src/ucommand.cc (send_error): New.
	Use it instead of open coded error strings.
	It could be part of UCommand, I'm not sure.

2006-12-27  Akim Demaille  <akim.demaille@free.fr>

	execute_
	* src/utypes.hh (UCommandStatus): Move to...
	* src/ucommand.hh (UCommand::Status): here.