@@ -22,11 +22,8 @@
 #ifndef UVARIABLENAME_HH
 # define UVARIABLENAME_HH
 
-# include <list>
-
 # include "fwd.hh"
-# include "utypes.hh"
-# include "ustring.hh"
+# include "memorymanager/memorymanager.hh"
 
 // ****************************************************************************
 //! Contains a variable name description
@@ -87,8 +84,20 @@ public:
   bool              isstatic;
   /// True if the var is in normalized mode.
   bool              isnormalized;
+
+  /// Type of Derivative
+  enum UDeriveType
+  {
+    UNODERIV,
+    UDERIV,
+    UDERIV2,
+    UTRUEDERIV,
+    UTRUEDERIV2
+  };
+
   /// Deriv type for the underlying variable.
   UDeriveType       deriv;
+
   /// True to request the target-val evaluation.
   bool              varerror;
   /// True to request the target evaluation.
