@@ -1,5 +1,15 @@
 2006-12-29  Akim Demaille  <akim.demaille@free.fr>
 
+	UVariableName::UDeriveType
+	* src/utypes.hh (UDeriveType): Move to...
+	* src/uvariablename.hh: here.
+	Adjust all uses.
+	* src/parser/bison/ugrammar.y (TOK_NORM): Use the same
+	string in the parser as it is in the scanner.
+	Use more string reprensentation for symbols.
+
+2006-12-29  Akim Demaille  <akim.demaille@free.fr>
+
 	Display the expression locations in errors
 	* src/uexpression.hh, src/uexpression.cc (eval_LIST, eval_GROUP):
 	New, extracted from...
